--- a/style.css
+++ b/style.css
@@ -6,15 +6,23 @@ body {
 
 #grid {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     border: 0.25px solid black;
     height: 600px;
     width: 600px;
+    max-height: 600px;
+    max-width: 600px;
+}
+
+.row {
+    display: flex;
+    border: .25px solid black;
+    flex-grow: 1;
 }
 
 .singleBox {
     border: .25px solid black;
     box-sizing: border-box;
     flex-grow: 1;
-    
 }
