--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 body {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+h1 {
+    font-family: 'Times New Roman', Times, serif;
 }
 
 #grid {
