--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ h1 {
     gap: 100px;
     margin: 20px;
 }
-.redButtons{
+.redButtons {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 14px;
     color: white;
@@ -122,6 +122,14 @@ h1 {
 }
 
 .active {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 14px;
     background-color: white; 
     color: red;
+    border: 1px solid black;
+    border-radius: 2px;
+    padding: 7px;
+    text-align: center;
+    margin: 10px;
+    
   }
